# project-fast-api

./: pyproject.toml
project_fast_api/: main.py
